# Math_lib-test_task

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
docs/: задание_cpp.docx
src/: Matrix.tpp  Vector.tpp
src/include/: Exceptions.hpp  Matrix.hpp  MatrixUtils.hpp  Vector.hpp
